# IRF-main

./: .gitignore  LISENCE.txt  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
src/: AnacondaSetting.md  README.md  RLsetting.yaml  main.py
src/Algorithm/: __init__.py  cds_learner.py  coma_learner.py  emc_learner.py  irf_learner.py  liir_learner.py  mapoca_learner.py  ppo_learner.py  vdn_Qlearner.py
src/EnvSetting/: GameInfo.py  TeamInfo.py
src/UnityEnv/: EnvInfo.yaml
src/UnityEnv/UnityScript/: ObjectCount.cs  RewardManager.cs  forwardStickVIsual.cs
src/UnityEnv/UnityScript/AgentScript/: DefaultAgent.cs  LowerAgent.cs  MARLagent.cs  UpperAgent.cs
src/UnityEnv/UnityScript/EnvController/: HRL_MARL_controller.cs  RSA_marl_2_Control.cs
src/UnityEnv/UnityScript/MARL_Test_env/: MARL_MARL_agent.cs  marl_marl_Controller.cs
src/UnityEnv/UnityScript/RSA_env/: RSAcontrol.cs
src/Utils/: GetConfig.py  calculate_pi.py  epsilon_schedule.py  parse.py
src/config/: cds.yaml  coma.yaml  emc.yaml  irf.yaml  liir.yaml  poca.yaml
src/irf_main.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modules/Actor/: MLPactor.py  RNNActor.py  TransformerActor.py  __init__.py
src/modules/Critic/: COMAcritic.py  IRFcritic.py  LICAcritic.py  LIIRcritic.py  POCAcritic.py  PPOcritic.py  episodic_memory_buffer.py
src/modules/action_selector/: __init__.py  action_selector.py  upper_actor.py
src/modules/intrinsic/: CDS_intrinsic.py
src/modules/mixer/: mixer.py  qatten_weight.py  si_weight.py
src/run_utils/: EnvManager.py  mlagents_trans.py  run.py  upper.py
(+70 files in other folders)
